--- a/boilerplate/boilerplate/boilerplate.vcxproj
+++ b/boilerplate/boilerplate/boilerplate.vcxproj
@@ -138,19 +138,27 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Edge.cpp" />
     <ClCompile Include="Geometry.cpp" />
     <ClCompile Include="InputHandler.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="NURB.cpp" />
+    <ClCompile Include="Patch.cpp" />
     <ClCompile Include="Program.cpp" />
     <ClCompile Include="RenderEngine.cpp" />
     <ClCompile Include="ShaderTools.cpp" />
+    <ClCompile Include="Terrain.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Edge.h" />
     <ClInclude Include="Geometry.h" />
     <ClInclude Include="InputHandler.h" />
+    <ClInclude Include="NURB.h" />
+    <ClInclude Include="Patch.h" />
     <ClInclude Include="Program.h" />
     <ClInclude Include="RenderEngine.h" />
     <ClInclude Include="ShaderTools.h" />
+    <ClInclude Include="Terrain.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
